infrastructure/kubeinvaders/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kubeinvaders-svc
spec:
  type: ClusterIP
  selector:
    app: kubeinvaders-pod
  ports:
    - name: kubeinvaders-http-out
      protocol: TCP
      port: 80
      targetPort:  kubeinvaders-http
