infrastructure/kubeinvaders/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubeinvaders-httproute

spec:
  parentRefs:
    - name: primary-gateway
      namespace: envoy-gateway-system
      sectionName: https

  hostnames:
    - kubeinvaders.sidewinder.lan

  rules:
    - backendRefs:
        - name: kubeinvaders-svc # SVC name (internal IP:PORT).
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubeinvaders-http-to-https

spec:
  parentRefs:
    - name: primary-gateway
      namespace: envoy-gateway-system
      sectionName: http

  hostnames:
    - kubeinvaders.sidewinder.lan

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
